erDiagram
    CUSTOMER {
        varchar id PK
        varchar email UK
        enum role
        varchar password_hash
        varchar current_order_id UK, FK
        timestamp created_at
        timestamp updated_at
    }

    PRODUCT {
        varchar id PK
        varchar name
        varchar description
        varchar image_url
        decimal price
        timestamp created_at
        timestamp updated_at
    }

    ORDER {
        varchar id PK
        varchar customer_id FK
        varchar phone_number
        varchar adress
        decimal total_price
        enum status "PLACED|ACCEPTED|DONE|CANCELLED"
        timestamp created_at
        timestamp updated_at
    }

    CHOSEN_PRODUCT {
        varchar id PK
        varchar order_id FK
        varchar product_id FK
        int quantity
        decimal unit_price
        timestamp created_at
        timestamp updated_at
    }

    CUSTOMER_DONE_ORDER {
        varchar customer_id PK, FK
        varchar order_id PK, FK
        timestamp completed_at
    }

    CONVERSATION {
        varchar id PK
        varchar customer_id UK, FK
        timestamp created_at
        timestamp updated_at
    }

    MESSAGE {
        varchar id PK
        varchar conversation_id FK
        varchar sender_id FK
        varchar body
        timestamp created_at
    }

    USER {
        varchar id PK
        varchar email UK
        varchar role_code FK
        timestamp created_at
        timestamp updated_at
    }

    ROLE {
        varchar code PK
        varchar name
    }

    DISH {
        varchar id PK
        varchar created_by_user_id FK
        varchar name
        text description
        varchar image_url
        decimal calories
        decimal proteins
        decimal fats
        decimal carbohydrates
        timestamp created_at
    }

    FOOD_ENTRY {
        varchar id PK
        varchar user_id FK
        varchar dish_id FK
        timestamp eaten_at
        timestamp created_at
    }

    CUSTOMER ||--o{ ORDER : places
    ORDER ||--o{ CHOSEN_PRODUCT : includes
    PRODUCT ||--o{ CHOSEN_PRODUCT : selected_in
    CUSTOMER ||--o{ CUSTOMER_DONE_ORDER : owns
    ORDER ||--o| CUSTOMER_DONE_ORDER : completed_as
    ORDER o|--o| CUSTOMER : current_order_of
    CUSTOMER ||--o| CONVERSATION : chats_in
    CONVERSATION ||--o{ MESSAGE : contains
    CUSTOMER ||--o{ MESSAGE : sends
    ROLE ||--o{ USER : assigns
    USER ||--o{ DISH : defines
    USER ||--o{ FOOD_ENTRY : logs
    DISH ||--o{ FOOD_ENTRY : eaten_as

    METRIC_EVENT_TYPE {
        int id PK
        varchar code UK
        varchar name
        varchar description
    }

    METRIC_PLATFORM {
        int id PK
        varchar code UK
        varchar name
    }

    METRIC_PAGE {
        int id PK
        varchar code UK
        varchar name
    }

    METRIC_EVENT {
        varchar id PK
        int event_type_id FK
        int platform_id FK
        int page_id FK
        varchar customer_id FK
        varchar session_id
        varchar product_id FK
        varchar order_id FK
        timestamp created_at
    }

    METRIC_EVENT_ATTRIBUTE {
        varchar event_id PK, FK
        varchar attr_key PK
        varchar attr_value
    }

    METRIC_EVENT_TYPE ||--o{ METRIC_EVENT : classifies
    METRIC_PLATFORM ||--o{ METRIC_EVENT : sourced_from
    METRIC_PAGE ||--o{ METRIC_EVENT : occurred_on
    CUSTOMER ||--o{ METRIC_EVENT : performed_by
    PRODUCT ||--o{ METRIC_EVENT : related_product
    ORDER ||--o{ METRIC_EVENT : related_order
    METRIC_EVENT ||--o{ METRIC_EVENT_ATTRIBUTE : has
